Pushing Jen Changes

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -7,5 +7,5 @@
   class="space-y-6"
   data-config='{{ config|tojson }}'
 ></div>
-<script type="module" src="{{ url_for('static', filename='js/analytics/analytics.bundle.js') }}" data-noload></script>
+<script type="module" src="{{ url_for('static', filename='js/analytics/analytics.bundle.js') }}" ></script>
 {% endblock %}
